--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>WalletConnect Test Wallet</title>
+    <title>Test Wallet</title>
+    <meta name="description" content="Test Wallet for WalletConnect" />
+
     <style>
       @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700,800");
     </style>
